force-app/main/default/objects/Cluster__c/Cluster__c.object-meta.xml
<CustomObject>
    <label>MPE Cluster</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MPE Cluster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MPE Clusters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>