force-app/main/default/objects/Cluster__c/fields/Cluster_Status__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Status__c</fullName>
    <label>Cluster Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>Installed</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>