force-app/main/default/objects/Cluster__c/fields/DI_Index__c.field-meta.xml
<CustomField>
    <fullName>DI_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DI Index</label>
    <referenceTo>NI_DeploymentInstanceIndex__c</referenceTo>
    <relationshipLabel>MPE Clusters</relationshipLabel>
    <relationshipName>MPE_Clusters</relationshipName>
    <type>Lookup</type>
</CustomField>