force-app/main/default/objects/Cluster__c/fields/Hosted__c.field-meta.xml
<CustomField>
    <fullName>Hosted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hosted</label>
    <type>Checkbox</type>
</CustomField>