force-app/main/default/objects/Cluster__c/fields/Management_Company__c.field-meta.xml
<CustomField>
    <fullName>Management_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Management Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MPE Clusters</relationshipLabel>
    <relationshipName>MPE_Clusters</relationshipName>
    <type>Lookup</type>
</CustomField>