force-app/main/default/objects/Cluster__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>MPE Clusters</relationshipLabel>
    <relationshipName>R00N30000001HAjxEAG</relationshipName>
    <type>Lookup</type>
</CustomField>