force-app/main/default/objects/Cluster__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Group</label>
    <referenceTo>Product_Group__c</referenceTo>
    <relationshipLabel>MPE Clusters</relationshipLabel>
    <relationshipName>MPE_Clusters</relationshipName>
    <type>Lookup</type>
</CustomField>