force-app/main/default/objects/Cluster__c/fields/Product_Line_Global__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Global__c</fullName>
    <description>NICC-019829</description>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line</valueSetName>
    </valueSet>
</CustomField>