force-app/main/default/objects/Cluster__c/fields/Purchased_Version__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-019829</description>
    <label>Purchased Version</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>This Version is not related to the selected Product Group. Please select a valid Version.</errorMessage>
        <filterItems>
            <field>SFDC_CSP_Version__c.Product_Line_Global__c</field>
            <operation>equals</operation>
            <valueField>$Source.Product_Line_Global__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SFDC_CSP_Version__c</referenceTo>
    <relationshipLabel>MPE Clusters (Purchased Version)</relationshipLabel>
    <relationshipName>MPE_Clusters1</relationshipName>
    <type>Lookup</type>
</CustomField>