force-app/main/default/objects/Cluster__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>