force-app/main/default/objects/Cluster__c/fields/Version_New__c.field-meta.xml
<CustomField>
    <fullName>Version_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-019829</description>
    <label>Version</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This Version is not related to the selected Product Line. Please select a valid Version.</errorMessage>
        <filterItems>
            <field>$Source.Product_Line_Global__c</field>
            <operation>equals</operation>
            <valueField>SFDC_CSP_Version__c.Product_Line_Global__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SFDC_CSP_Version__c</referenceTo>
    <relationshipLabel>MPE Clusters</relationshipLabel>
    <relationshipName>MPE_Clusters</relationshipName>
    <type>Lookup</type>
</CustomField>