force-app/main/default/objects/Cluster__c/recordTypes/Delphi_Daylight.recordType-meta.xml
<RecordType>
    <fullName>Delphi_Daylight</fullName>
    <active>true</active>
    <description>Delphi or Daylight Cluster</description>
    <label>Delphi/Daylight</label>
</RecordType>