force-app/main/default/objects/Cluster__c/recordTypes/MeetingMatrix_Cluster.recordType-meta.xml
<RecordType>
    <fullName>MeetingMatrix_Cluster</fullName>
    <active>true</active>
    <description>Meeting Matrix Cluster</description>
    <label>MeetingMatrix Cluster</label>
</RecordType>