force-app/main/default/objects/Cluster__c/validationRules/Product_Line_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Line_Required</fullName>
    <active>true</active>
    <description>NICC-019829</description>
    <errorConditionFormula>TEXT(Product_Line_Global__c ) = null</errorConditionFormula>
    <errorMessage>Product Line is required</errorMessage>
</ValidationRule>