force-app/main/default/objects/Cluster__c/validationRules/Version_Check_New_Product_Line.validationRule-meta.xml
<ValidationRule>
    <fullName>Version_Check_New_Product_Line</fullName>
    <active>true</active>
    <description>NICC-019829 - Restrict the Version selection to Version whose Product Group should match the Product Group selected.

Product Group will be replaced by Product Line</description>
    <errorConditionFormula>AND (
    TEXT(Product_Line_Global__c) != TEXT(Version_New__r.Product_Line_Global__c),
    Version_New__c != null
)</errorConditionFormula>
    <errorDisplayField>Version_New__c</errorDisplayField>
    <errorMessage>Please select a Version that is associated with the Cluster&apos;s Product Line</errorMessage>
</ValidationRule>